--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -3,15 +3,15 @@ footer {
     position: flex;
     bottom: 0;
     flex-direction: column;
-    color: antiquewhite;
+    color: var(--font-color);
     background-color: var(--header-footer-bg);
     overflow: hidden;
 }
 footer .footersec {
     display: flex;
     justify-content: space-evenly;
-    border-top: 1px solid antiquewhite;
-    border-bottom: 1px solid antiquewhite;
+    border-top: 1px solid var(--font-color);
+    border-bottom: 1px solid var(--font-color);
     text-align: center;
     padding: 15px 3vw;
 }
