--- a/src/styles/Shop.css
+++ b/src/styles/Shop.css
@@ -4,7 +4,7 @@ nav {
     position: sticky;
     top: 3.9rem;
     backdrop-filter: blur(5px) brightness(80%);
-    border-bottom: 1.2px solid antiquewhite;
+    border-bottom: 1.2px solid var(--font-color);
     justify-content: space-between;
     align-items: center;
     padding: 0.75rem 1.25rem;
@@ -33,7 +33,7 @@ input::placeholder {
 .nav-icons {
     width: 1.5rem;
     height: 1.5rem;
-    color: antiquewhite;
+    color: var(--font-color);
 }
 
 
@@ -159,7 +159,7 @@ input::placeholder {
 }
 
 .cart-icon {
-    color: antiquewhite;
+    color: var(--font-color);
 }
 
 
@@ -185,7 +185,7 @@ input::placeholder {
 
 .rec-btn {
     width: 9rem;
-    color: antiquewhite;
+    color: var(--font-color);
     padding: 1rem 2rem;
     margin-right: 6px;
     background: transparent;
@@ -252,7 +252,7 @@ input::placeholder {
     margin-right: 1rem;
     height: 1rem;
     width: 1rem;
-    background-color: antiquewhite;
+    background-color: var(--font-color);
     border-radius: 50%;
 }
 
