--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 body {
-  background: url('../images/BodyWallSimulation2.png');
+  background: url(images/Somnium-Background2.svg);
   color: var(--font-color);
   margin: 0;
   font-size: 1.2rem;
