--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,6 +22,7 @@ button {
     border-radius: 10px;
     box-shadow: 2px 2px 5px var(--darker-bg);
     transition: all 0.1s ease-in-out;
+    text-decoration: none;
 }
 
 button:hover {
