--- a/src/styles/Shop.css
+++ b/src/styles/Shop.css
@@ -64,6 +64,9 @@ input::placeholder {
     left: 0;
     flex-direction: column;
 }
+.shopSidebarContainer-mobile {
+    display: none;
+}
 
 .shopSidebar-title {
     font-size: 1rem;
@@ -74,17 +77,6 @@ input::placeholder {
 .logo-container {
     position: relative;
     z-index: 4;
-}
-
-@media (max-width:769px){
-    .shopSidebar {
-        width: 25%;
-    }
-}
-@media (max-width: 450px){
-    .shopSidebar {
-        width: 35%;
-    }   
 }
 
 
@@ -108,8 +100,18 @@ input::placeholder {
     min-height: 100vh;
 }
 
+.card-container-mobile {
+    top: 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    z-index: -2;
+    min-height: 100vh;
+}
+
 .card {
-    backdrop-filter: brightness(100%) blur(5px);
+    backdrop-filter: brightness(95%) blur(7px);
+    border-radius: 10px;
     max-width: 300px;
     margin: 1.5rem;
     padding: 1.5rem;
@@ -163,24 +165,17 @@ input::placeholder {
 }
 
 
-@media(max-width:1000px){
-    .card-container {
-        margin-left: 13rem;
-    }
+/*---------------------- Recommended Section ----------------------*/
+.recommended-title {
+    margin: 1.25rem 0 1.25rem 20rem;
+    font-size: 1.25rem
 }
 
-
-/*---------------------- Recommended Section ----------------------*/
 .recommended-flex {
     display: flex;
     flex-wrap: wrap;
     margin-left: 20rem;
     gap: 0.5rem;
-}
-
-.recommended-title {
-    margin: 1.25rem 0 1.25rem 20rem;
-    font-size: 1.25rem
 }
 
 .rec-btn {
@@ -190,7 +185,7 @@ input::placeholder {
     margin-right: 6px;
     background: transparent;
     border: none;
-    backdrop-filter: blur(5px) brightness(90%);
+    backdrop-filter: blur(7px) brightness(85%);
     cursor: pointer;
 }
 
@@ -198,15 +193,23 @@ input::placeholder {
     backdrop-filter: brightness(80%);
 }
 
+.recommended-section-mobile {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
 
-@media(max-width:1000px){
-    .recommended-title {
-        margin-left: 18rem;
-    }
+.recommended-section-mobile > .recommended-title {
+    margin: 1.25rem;
+}
 
-    .recommended-flex {
-        margin-left: 13rem;
-    }
+.recommended-section-mobile > .recommended-flex {
+    display: flex;
+    justify-content: center;
+    padding: 0 2rem ;
+    gap: 1rem;
+    margin: 0;
 }
 
 /*---------------------- Category Section ----------------------*/
