--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,6 @@
 html, body {
   height: 100%;
+  box-sizing: border-box;
 }
 ::-webkit-scrollbar {
   background: var(--darker-bg);
@@ -14,33 +15,27 @@ html, body {
   background: var(--medium-shade);
 }
 
-button {
+.mainButton {
+    display: flex;
+    justify-content: center;
+    margin: 0 5px;
+    padding: 20px 40px;
     color: var(--font-color);
     background: transparent;
-    border: none;
-    backdrop-filter: blur(5px) brightness(90%);
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px var(--darker-bg);
-    transition: all 0.1s ease-in-out;
+    border-radius: 24px;
+    backdrop-filter: brightness(85%);
+    box-shadow: 3px 5px 10px var(--darker-bg);
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.2s;
+    overflow: hidden;
     text-decoration: none;
+    &:hover {
+        backdrop-filter: brightness(110%);
+        box-shadow: 3px 3px 8px var(--darker-bg);
+        transform: scaleX(1.1) scaleY(1.1);
+    }
 }
-
-button:hover {
-    backdrop-filter: blur(5px) brightness(80%);
-    box-shadow: 3px 3px 8px var(--darker-bg);
-    transform: scaleX(104%) scaleY(104%);
-}
-
-/*input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active{
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: #fdfdfd;
-    box-shadow: transparent;
-    caret-color: var(--font-color);
-    font-size: 1rem;
-}*/
 
 input {
     padding: 0.75rem 1.25rem;
