--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,100 +1,53 @@
-
-.sec-5 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.sec5 {
-    backdrop-filter: brightness(50%);
-    width: 100%;
-    padding: 5rem;
-    height: auto;
-    color: var(--font-color);
-}
-.sec5 h1 {
-    font-size: 2.4rem;
-}
-.sec5 .container {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 25px;
-}
-.sec5 .container > div p {
-    cursor: pointer;
-}
-.sec5 h3 {
-    font-size: 1.1rem;
-    padding: 10px 0;
-    padding-bottom: 5px;
-}
-.sec5 p, .sec5 a {
-    font-size: 0.7rem;
-    margin-bottom: 10px;
-    text-decoration: none;
-    color: var(--font-color);
-}
-.sec5 .container div:nth-child(2) {
-    margin-left: 0px;
-    width: 69%;
-}
-.sec5 form {
-    padding: 0 20px;
-    display: flex;
-    flex-direction: column;
-}
-
-.sec5 .home-input {
-    background-color: transparent;
-    outline: none;
-    border: none;
-    border-bottom: 1px solid var(--font-color);
-    margin: 10px;
-    line-height: 20px;
-    color: var(--font-color);
-    transition: none;
-}
-
-.sec5 > textarea {
-    width: 100%;
-    background-color: transparent;
-    outline: none;
-    border: none;
-    border-bottom: 1px solid var(--font-color);
-    margin: 10px;
-    line-height: 20px;
-    color: var(--font-color);
-    overflow: hidden;
-    resize: none;
-}
-.sec5 > input::placeholder, textarea::placeholder {
-    color: rgb(193, 196, 212);
-}
-.sec5 .btn-1 {
-    font-size: 1rem;
-    margin-top: 20px;
-    color: var(--font-color);
-    border: 1px solid var(--font-color);
-}
-.sec5 .btn-1:hover {
-    transform: scaleX(103%) scaleY(103%);
-}
-.sec5 > .container div:nth-child(3) {
-    height: 100px;
-    background-color: transparent;
-    margin: 80px 0;
-}
-.sec5 > .container div:nth-child(4) {
-    display: flex;
-    flex-direction:column;
-}
-.sec5 a:hover {
-    background-color: var(--font-color);
-}
-@media only screen and (max-width: 1000px) {
-    .sec-5 {
-        margin: 0;
+.disclaimer {
+    & > p {
+        font-size: large;
+        text-align: justify;
     }
-    .sec5 {
-        padding: 30px 50px;
+}
+
+.form > h1 {
+    font-size: 21px;
+    font-weight: 600;
+}
+
+form {
+    p {
+        font-size: 18px;
+        font-weight: 500;
+        user-select: none;
+    }
+    input{
+        box-shadow: 2px 4px 8px var(--darker-bg);
+        accent-color: var(--header-footer-bg);
+        margin-right: 4px;
+        &:not([type="radio"]):not([type="checkbox"]) {
+            width: 100%;
+        }
+    }
+    label {
+        & > p {
+            line-height: 1.5rem;
+            &::before {
+                content: '⭐';
+            }
+        }
+    }
+    
+    & > fieldset {
+        & > legend {
+            line-height: 1.5rem;
+            &::before {
+                content: '⭐';
+            }
+        }
+        & > label {
+            font-size: 17px;
+            display: flex;
+            align-items: center;
+            flex-direction: row; 
+        }
+    }
+    button:hover {
+        transform: scale(1.03) !important;
     }
 }
