--- a/src/styles/Shop.css
+++ b/src/styles/Shop.css
@@ -1,24 +1,5 @@
 /*---------------------- Navigation Section ----------------------*/
-nav {
-    display: flex;
-    position: sticky;
-    top: 3.9rem;
-    backdrop-filter: blur(5px) brightness(80%);
-    border-bottom: 1.2px solid var(--font-color);
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.75rem 1.25rem;
-    z-index: 2;
-}
 
-.search-right {
-    width: 100%;
-    padding-left: 17.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-}
 
 input::placeholder {
     color: rgb(211, 209, 206);
@@ -38,9 +19,6 @@ input::placeholder {
 
 
 @media(max-width:1000px) {
-    nav {
-        top: 6.6rem;
-    }
     .search-right {
         width: 100vw;
         padding-left: 11.5rem;
@@ -60,7 +38,6 @@ input::placeholder {
     width: 13%;
     display: flex;
     position: absolute;
-    top: 9rem;
     left: 0;
     flex-direction: column;
 }
@@ -74,11 +51,6 @@ input::placeholder {
     margin-bottom: 1rem;
 }
 
-.logo-container {
-    position: relative;
-    z-index: 4;
-}
-
 
 
 /*---------------------- Product Section ----------------------*/
@@ -89,28 +61,8 @@ input::placeholder {
     flex-direction: column;
     z-index: 10;
 }
-
-.card-container {
-    top: 0;
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 18.9rem;
-    margin-top: 2rem;
-    z-index: -2;
-    min-height: 100vh;
-}
-
-.card-container-mobile {
-    top: 0;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    z-index: -2;
-    min-height: 100vh;
-}
-
 .card {
-    backdrop-filter: brightness(95%) blur(7px);
+    backdrop-filter: brightness(85%) blur(7px);
     border-radius: 10px;
     max-width: 300px;
     margin: 1.5rem;
@@ -118,12 +70,12 @@ input::placeholder {
     cursor: pointer;
     box-shadow: 2px 2px 10px var(--darker-bg);
     transition: all 0.2s ease-in-out;
+    & :hover {
+        backdrop-filter: brightness(75%);
+        transform: scaleX(102%) scaleY(102%);
+    }
 }
 
-.card:hover {
-    backdrop-filter: brightness(90%);
-    transform: scaleX(102%) scaleY(102%);
-}
 
 .card-image {
     width: 13rem;
@@ -133,12 +85,12 @@ input::placeholder {
     margin-bottom: 1rem;
     display: flex;
     justify-content: space-between;
+    & > img {
+        height: 30px;
+        width: auto;
+    }
 }
 
-.card-title > img {
-    height: 30px;
-    width: auto;
-}
 
 .card-reviews {
     margin-bottom: 1rem;
@@ -164,67 +116,20 @@ input::placeholder {
     color: var(--font-color);
 }
 
-
-/*---------------------- Recommended Section ----------------------*/
-.recommended-title {
-    margin: 1.25rem 0 1.25rem 20rem;
-    font-size: 1.25rem
-}
-
-.recommended-flex {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 20rem;
-    gap: 0.5rem;
-}
-
-.rec-btn {
-    width: 9rem;
-    color: var(--font-color);
-    padding: 1rem 2rem;
-    margin-right: 6px;
-    background: transparent;
-    border: none;
-    backdrop-filter: blur(7px) brightness(85%);
-    cursor: pointer;
-}
-
-.rec-btn:hover {
-    backdrop-filter: brightness(80%);
-}
-
-.recommended-section-mobile {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    flex-direction: row;
-}
-
-.recommended-section-mobile > .recommended-title {
-    margin: 1.25rem;
-}
-
-.recommended-section-mobile > .recommended-flex {
-    display: flex;
-    justify-content: center;
-    padding: 0 2rem ;
-    gap: 1rem;
-    margin: 0;
-}
-
 /*---------------------- Category Section ----------------------*/
-.categoryDiv {
-    display: block;
-}
-
-.shopSidebar-cat-title {
-    font-size: 1.3rem;
-    font-weight: 500;
-    margin: 0.3rem 0;
+.categoryTitle {
+    font-size: 24px;
+    font-weight: 600;
+    margin: 6px 0;
 }
 
 .shopSidebar-items {
     width: 7rem;
+    @media(max-width:1000px){
+        .shopSidebar-items {
+            width: 7rem;
+        }
+    }
 }
 
 .shopSidebar-label-container {
@@ -240,48 +145,24 @@ input::placeholder {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    @media(max-width:1000px){
+        width: 12rem;
+    }
+    &:hover > input ~.checkmark {
+        background-color: rgb(192, 191, 190);
+    }
+    & > input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        & :checked ~.checkmark {
+            background-color: var(--darker-bg);
+        }
+    }
 }
-
-.shopSidebar-label-container > input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-}
-
-.checkmark {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 1rem;
-    height: 1rem;
-    width: 1rem;
-    background-color: var(--font-color);
-    border-radius: 50%;
-}
-
 .input {
     width: 80%;
 }
 
-.shopSidebar-label-container:hover > input ~.checkmark {
-    background-color: rgb(192, 191, 190);
-}
-
-.shopSidebar-label-container > input:checked ~.checkmark {
-    background-color: var(--darker-bg);
-}
 
 
-
-@media(max-width:1000px){
-    .shopSidebar-label-container {
-        width: 12rem;
-
-    }
-    .shopSidebar-items {
-        width: 7rem;
-    }
-}
-
-
-/*---------------------- Price Section ----------------------*/
