--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -25,7 +25,7 @@
     }
     & li {
         display: flex;
-        width: 12vw;
+        width: 13vw;
         height: 3rem;
         align-items: center;
         justify-content: center;
@@ -33,23 +33,38 @@
     }
     & .navbarLink {
         & li {
-            border-radius: 24px;        
+            border-radius: 24px; 
+            display: flex;
+
+            position: relative; 
+        &::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            transform: scaleX(0);
+            height: 1px;
+            bottom: 0;
+            left: 0;
+            background-color: antiquewhite;
+            transform-origin: bottom center;
+            transition: transform 0.25s ease-out;
+        }
+        &:hover::after {
+            transform: scaleX(1);
+            transform-origin: bottom center;
+        }
         }
     }
 }
 
 
-.active {
-    & li{
-        border-radius: 24px 24px 0 0 !important;
-    }
-    &::after {
-        display: block;
-        content: "";
-        width: auto;
-        border-bottom: solid 1px;
-    }
+.active::after {
+    display: block;
+    background-color: antiquewhite;
+    content: "";
+    height: 1px;
 }
+
 
 
 .logo-visible {
@@ -82,8 +97,7 @@
     display: flex;
     flex-direction: row;
 }
-
-.redirectButtons ul li:hover, 
+ 
 .headerButton:hover, 
 .loginButton:hover, 
 .cartButton:hover, 
@@ -91,12 +105,16 @@
     background-color: var(--darker-bg);
     transition: background-color .3s;
     box-shadow: 1px 1px 1px rgb(13, 12, 12);
-
+    @media ( max-width: 1023px ) {
+        &{
+            background-color: none;
+            box-shadow: none;
+        }
+    }
 }
 .sidebar ul li:hover {
-    color: rgb(143, 142, 142);
     transition: background-color .3s;
-    backdrop-filter: blur(100px);
+    color: antiquewhite;
 }
 
 ul {
