--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,13 +1,13 @@
 @import "tailwindcss";
 
 body {
-  background: url(images/Somnium-Background2.svg);
+  background: url(images/Somnium/Somnium-Background2.svg);
   color: var(--font-color);
   margin: 0;
-  font-size: 1.3rem;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-size: 1.1rem;
+  font-family: "Spectral", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
